--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "discord.js": "^13.2.0",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "git-last-commit": "^1.0.1",
         "got": "^11.8.2",
         "jsoning": "^0.12.22",
         "moment": "^2.29.1",
